--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Détails de l'événement <i>{{ evenement.description }}</i> à survenir :</h1>
+    <h1>Détails de l'événement <i>{{ evenement.titre }}</i> :</h1>
     <div class="media" style="margin-top: 60px;">
         <div class="media-body">
             <div class="row">
