Bug sur vue par type + modif BDD pour correction de bug sur jointures

--- a/templates/evenement/list.html.twig
+++ b/templates/evenement/list.html.twig
@@ -1,32 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    <H2>{{ date }}</H2><H2>{{ time }}</H2>
+
     <table class="table text-center">
         <tr>
+            <th class="active text-center">Titre</th>
             <th class="active text-center">Description</th>
             <th class="active text-center">Ville</th>
             <th class="active text-center">Cotisation</th>
             <th class="active text-center">Type</th>
         </tr>
-        <pre>
-            {{ dump(evenements) }}
-        </pre>
 
         {% for evenement in evenements %}
             <tr>
-                <td><a href="{{ path('evenement.show', {id: evenement.id}) }}">{{ evenement.description }}</a></td>
-
-                <td>  
-                    <a href="#">
-                        {{ evenement.ville }}
+                <td>
+                    <a href="{{ path('evenement.show', {id: evenement.id}) }}">
+                        {{ evenement.titre }}
                     </a>
                 </td>
+                <td>{{ evenement.description }}</td>
+                <td>{{ evenement.ville }}</td>
                 <td>{{ evenement.cotisation }}</td>
                 <td>{{ evenement.idType.libelleType }}</td>
             </tr>
-            <pre>
-                {{ dump(evenement) }}
-            </pre>
         {% endfor %}
+
     </table>
 {% endblock %}
