--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}Gestion d'événements'{% endblock %}</title>
+    <title>{% block title %}Gestion d'événements{% endblock %}</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -15,16 +15,40 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{{ path('evenement.list') }}">
-            Événements à venir
-          </a>
+            <a class="navbar-brand" href="{{ path('home.acceuil') }}">
+                Acceuil
+            </a>
+
+            <div class="navbar-brand">|</div>
+
+            <a class="navbar-brand" href="{{ path('evenement.list') }}">
+                Événements à venir
+            </a>
+
+            <div class="navbar-brand">|</div>
+
+            <a class="navbar-brand" href="{{ path('type.list') }}">
+                Événements à venir par type
+            </a>
+
+            <div class="navbar-brand">|</div>
+
+            <a class="navbar-brand" href="{{ path('evenement.listExpire') }}">
+                Événéments passé
+            </a>
+
+            <div class="navbar-brand">|</div>
+
+            <a class="navbar-brand" href="{{ path('type.listExpire') }}">
+                Événéments passé par type
+            </a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <div>
-                        <a href="#" class="btn btn-default navbar-btn">Créer un événement</a>
+                        <a href="#" class="btn btn-default navbar-btn">Connexion</a>
                     </div>
                 </li>
             </ul>
