--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -1,28 +1,26 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Détails de l'événement <i>{{ evenement.titre }}</i> :</h1>
-    <div class="media" style="margin-top: 60px;">
+    <h3>Détails de l'événement <i>{{ evenement.titre }}</i> :</h3>
+    <div class="media">
         <div class="media-body">
-            <div class="row">
-                <div class="col-sm-10">
-                    <h3 class="media-heading"><strong>{{ evenement.adresse }}</strong> <i>({{ evenement.ville }})</i></h3>
-                </div>
-
-                <div class="col-sm-2">
-                    <i class="pull-right">Débute le {{ evenement.dateDebut|date('m/d/Y') }}</i>
-                </div>
-            </div>
-
             <p>
-                <strong>{{ evenement.description }}</strong>
-                <small> - <i>{{ evenement.idType.libelleType }}</i></small>
+                <small> Evenement de type : <i>{{ evenement.idType.libelleType }}</i></small>
             </p>
-
-            <p>{{ evenement.description|nl2br }}</p>
-
             <p>
-                <strong>Cotisation :</strong> {{ evenement.cotisation }}
+                <H4>
+                    <p><strong><u>Description</u></strong></p>
+                    <p style="border:solid; border-width:2px; border-color:#868686; padding:5px;">{{ evenement.description|nl2br }}</p>
+                </H4>
+            </p>
+            <p>
+                <strong>Lieu : </strong>{{ evenement.adresse }} <i>({{ evenement.ville }})</i>
+            </p>
+            <p>
+                <strong>Cotisation :</strong> {{ evenement.cotisation }} €
+            </p>
+            <p>
+                <strong>Début de l'événement :</strong> {{ evenement.dateDebut|date('m/d/Y') }}
             </p>
             <p>
                 <strong>Fin de l'événement :</strong> {{ evenement.dateFin|date('m/d/Y') }}
@@ -42,4 +40,29 @@
             </div>
         </div>
     </div>
+
+    {% if commentaires is defined %}
+
+    <div class="media">
+        <div class="media-body">
+            <p>
+                <U>Commentaires</U>
+
+                {% for commentaire in Commentaires %}
+                    <div>
+                        <H5>{{ commentaire.auteur }}</H5>
+                        <p style="border:solid; border-width:2px; border-color:#868686; padding:5px;">
+                            {{ commentaire.content }}
+                        </p>
+                    </div>
+                {% endfor %}
+            </p>
+        </div>
+    </div>
+
+        <ul>
+
+        </ul>
+    {% endif %}
+
 {% endblock %}
