--- a/templates/evenement/list.html.twig
+++ b/templates/evenement/list.html.twig
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-    <H2>{{ date }}</H2><H2>{{ time }}</H2>
-
     <table class="table text-center">
         <tr>
             <th class="active text-center">Titre</th>
@@ -11,6 +9,8 @@
             <th class="active text-center">Ville</th>
             <th class="active text-center">Cotisation</th>
             <th class="active text-center">Type</th>
+            <th class="active text-center">Modifer</th>
+            <th class="active text-center">Supprimer</th>
         </tr>
 
         {% for evenement in evenements %}
@@ -24,6 +24,18 @@
                 <td>{{ evenement.ville }}</td>
                 <td>{{ evenement.cotisation }}</td>
                 <td>{{ evenement.idType.libelleType }}</td>
+                <td>
+                    <a class="btn btn-primary" href="{{ path('evenement.edit', {id: evenement.id}) }}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        Éditer
+                    </a>
+                </td>
+                <td>
+                    <a href="{{ path('evenement.delete', {id: evenement.id}) }}" class="btn btn-default navbar-btn">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        Supprimer
+                    </a>
+                </td>
             </tr>
         {% endfor %}
 
