--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -25,16 +25,28 @@
             <p>
                 <strong>Fin de l'événement :</strong> {{ evenement.dateFin|date('m/d/Y') }}
             </p>
+
+            {% if evenement.nbPlace%} {% if evenement.nbPlace < 0 %}
+            <p>
+                <strong>Nombre de place maximum :</strong> {{ evenement.nbPlace }}
+            </p>
+            {% endif %} {% endif %}
+
             <div class="row">
                 <div class="col-sm-12 text-right">
-                    <a class="btn btn-default" href="#">
+                    <a class="btn btn-default" href="{{ path('evenement.list') }}">
                         <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
                         Liste des événements
                     </a>
 
-                    <a class="btn btn-primary" href="#">
+                    <a class="btn btn-primary" href="{{ path('evenement.edit', {id: evenement.id}) }}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         Éditer
+                    </a>
+
+                    <a href="{{ path('evenement.delete', {id: evenement.id}) }}" class="btn btn-default navbar-btn">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        Supprimer
                     </a>
                 </div>
             </div>
