--- a/templates/type/list.html.twig
+++ b/templates/type/list.html.twig
@@ -9,6 +9,8 @@
             <th class="active text-center">Description</th>
             <th class="active text-center">Ville</th>
             <th class="active text-center">Cotisation</th>
+            <th class="active text-center">Modifer</th>
+            <th class="active text-center">Supprimer</th>
         </tr>
 
         {% for evenement in type.evenements %}
@@ -21,6 +23,18 @@
                 <td>{{ evenement.description }}</td>
                 <td>{{ evenement.ville }}</td>
                 <td>{{ evenement.cotisation }}</td>
+                <td>
+                    <a class="btn btn-primary" href="{{ path('evenement.edit', {id: evenement.id}) }}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        Éditer
+                    </a>
+                </td>
+                <td>
+                    <a href="{{ path('evenement.delete', {id: evenement.id}) }}" class="btn btn-default navbar-btn">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        Supprimer
+                    </a>
+                </td>
             </tr>
         {% endfor %}
 
